--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -129,7 +129,7 @@ a {
   background-size: cover; 
   background-repeat: no-repeat;
   width: 100%;
-  padding:154px 0px;
+  padding:266px 0px 154px 0px ;
 }
 .cover-text{
   color: #FBC04E;
@@ -153,7 +153,39 @@ line-height: 66px; /* 117.857% */
   gap: 48px;
 }
 .cover-svg{
-  
+  right: 0px;
+  bottom: -15%;
+}
+.search-button{
+  position: relative;
+  display: inline-flex;
+  padding: 14px 28px;
+  border-radius: 32px;
+border: 2px solid #F2BD57;
+background: rgba(0, 0, 0, 0.40);
+gap: 8px; 
+color: #FFF;
+overflow: hidden;
+z-index: 1;
+}
+.search-button::before{
+  content: "";
+  position: absolute;
+  top: var(--y);
+  left: var(--x);
+  transform: translate(-50%,-50%);
+  height: 0;
+  width: 0;
+  border-radius: 50%;
+  background:#F2BD57;
+  transition: width 0.5s,height 0.5s;
+}
+.search-button:hover::before{
+ width: 300px;
+ height: 300px;
+}
+.z-100{
+  z-index: 1;
 }
 /* hero section */
 
