--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1461,3 +1461,46 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 ::before {
   border: 1px solid red;
 } */
+
+
+
+/* .hover-button {
+  position: relative;
+  padding: 10px 20px;
+  background-color: #020E28;
+  color: white;
+  border: none;
+  font-size: 18px;
+  border-radius: 5px;
+  cursor: pointer;
+  overflow: hidden;
+} */
+/* *
+.hover-button .wheel {
+  position: absolute;
+  bottom: -20px; 
+  left: -50px;   
+  width: 50px;
+  height: 50px;
+  transform: rotate(0deg);
+  transition: all 1s ease-out;
+  opacity: 0;
+}
+
+.hover-button:hover .wheel {
+  left: 100%; 
+  opacity: 1;
+  animation: rotate-wheel 0.5s linear infinite; 
+}
+*/
+
+
+/* Keyframes for rotation */
+/* @keyframes rotate-wheel {
+  from {
+    transform: rotate(-360deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+} */
